--- a/PluginManager_Mobile/PluginManager_Mobile/Views/CategoryPage.xaml
+++ b/PluginManager_Mobile/PluginManager_Mobile/Views/CategoryPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="PluginManager_Mobile.Views.CategoryPage"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             >
     <ContentPage.Resources>
         <Style x:Key="title" TargetType="Label">
             <Setter Property="FontSize" Value="Title"/>
@@ -11,56 +12,63 @@
             <Setter Property="TextColor" Value="Black"/>
         </Style>
         <Style x:Key="subTitle" TargetType="Label">
-            <Setter Property="FontSize" Value="Subtitle"/>
+            <Setter Property="FontSize" Value="Large"/>
             <Setter Property="HorizontalOptions" Value="Center"/>
             <Setter Property="TextColor" Value="Black"/>
         </Style>
-        <Style x:Key="catItem" TargetType="Frame">
-            <Setter Property="HeightRequest" Value="90"/>
-            <Setter Property="WidthRequest" Value="130"/>
+        <Style x:Key="catItem" TargetType="Button">
+            <Setter Property="HeightRequest" Value="120"/>
+            <Setter Property="WidthRequest" Value="180"/>
+            <Setter Property="FontSize" Value="Medium"/>
+            <Setter Property="TextColor" Value="#19323b"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="CornerRadius" Value="25"/>
-            <Setter Property="BackgroundColor" Value="Green"/>
+            <Setter Property="BorderColor" Value="#19323b"/>
+            <Setter Property="BorderWidth" Value="2"/>
         </Style>
         
     </ContentPage.Resources>
+    <NavigationPage.TitleView>
+        <Label Text="FM - Plugin Manager" HorizontalTextAlignment="Center" FontSize="Large"/>
+    </NavigationPage.TitleView>
+    
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Plugin Manager"                
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Categories"                
                 Padding="0,40,0,0"
                 Style="{StaticResource title}"/>
-            <Label Text="Categories"                
-                Padding="0,20,0,0"
-                Style="{StaticResource subTitle}"/>
-            <FlexLayout Direction="Row" Padding="20,40,0,0" JustifyContent="Start" AlignItems="Start" Wrap="Wrap">
-                <Frame Style="{StaticResource catItem}">
-                    <Label FontSize="Title" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Text="Drums"/>
-                    <!--<Frame.Behaviors>
-                        <xct:EventToCommandBehavior EventName="Clicked" Command="{Binding CategorySelected}" />
-                    </Frame.Behaviors>-->
-                    
-                    <Frame.Triggers>
-                        <DataTrigger TargetType="Frame" Binding="{Binding IsActive}" Value="True">
-                            <Setter Property="BackgroundColor" Value="Blue"/>
-                        </DataTrigger>
-                    </Frame.Triggers>
-                </Frame>
 
-                <Frame Style="{StaticResource catItem}">
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="{Binding CategorySelected}"/>
-                    </Frame.GestureRecognizers>
-                <Label FontSize="Title" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Text="Keys"/>
-                </Frame>
+                <FlexLayout Direction="Row" Padding="20,40,0,0" JustifyContent="Start" AlignItems="Start" Wrap="Wrap">
+                    <Button Style="{StaticResource catItem}" Text="Drums">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup Name="CommonStates">
+                                <VisualState Name="Normal">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="#f8f8f8"/>
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="#19323b"/>
+                                        <Setter Property="TextColor" Value="White"/>
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Button>
 
-                <Frame Style="{StaticResource catItem}">
-                    <Label FontSize="Title" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Text="Strings"/>
-                </Frame>
-                <Frame Style="{StaticResource catItem}">
-                    <Label FontSize="Title" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Text="Horns"/>
-                </Frame>
+                    <Button Style="{StaticResource catItem}" Text="Keys">
+                    </Button>
+                    <Button Style="{StaticResource catItem}" Text="Strings">
+                    </Button>
+                    <Button Style="{StaticResource catItem}" Text="Horns">
+                    </Button>
 
-            </FlexLayout>
-        </StackLayout>
+
+                </FlexLayout>
+            </StackLayout>
+        </ScrollView>
+    
     </ContentPage.Content>
 </ContentPage>
